# ilo-pali

./: .gitignore  Makefile  README.md  TODO.md  create-gpt.fdisk  kernel.gdb  kernel.ld  makefile-helper.sh
boot/: maps
boot/a/: Makefile
boot/a/src/: main.c
boot/b/: Makefile
boot/b/src/: main.c  uart.s
boot/fsd/: Cargo.toml  rust-toolchain.toml
boot/fsd/src/: lib.rs  main.rs
boot/initd/: Makefile
boot/initd/src/: fat16.c  fat16.h  main.c  memory.c  memory.h  syscall.c  syscall.h
boot/test/: Makefile
boot/test/src/: main.c  memory.c  memory.h  syscall.c  syscall.h  (+1 more)
boot/uwu/: Makefile
boot/uwud/: Makefile
boot/virtblock/: Makefile
boot/virtd/: Makefile
boot/virtgpu/: Makefile
include/: alloc.h  fdt.h  format.h  join.h  phalloc.h  sync.h  syscalls.h  virtio.h
include/core/: prelude.h
include/iter/: hashmap.h  string.h  vec.h
kernel/: Makefile  kernel.ld
kernel/src/: boot.s  console.c  console.h  elf.c  elf.h  fat16.c  fdt.c  fdt.h  hashmap.c  hashmap.h  interrupt.c  interrupt.h  interrupt.s  kernel.c  memory.c  memory.h  mmu.c  mmu.h  opensbi.h  opensbi.s  process.c  process.h  queue.c  queue.h  string.c  string.h  sync.c  sync.h  time.c  time.h
lib/c/: Makefile
lib/fat/: Makefile
lib/fdt/: Makefile
lib/phalloc/: Makefile
lib/rust/std/: Cargo.toml
lib/rust/std/src/: lib.rs  sync.rs  syscalls.rs
lib/virtio/: Makefile
src/: boot.s  console.c  elf.c  elf.h  fat16.c  fat16.h  fdt.c  fdt.h  interrupt.c  interrupt.h  interrupt.s  kernel.c  memory.c  memory.h  mmu.c  mmu.h  opensbi.h  opensbi.s  process.c  process.h  string.h
(+32 files in other folders)
