[package]
name = "fsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
std = { path = "../../lib/rust/std/", version = "*" }
hashbrown = "0.12.0"
